--- a/rhamble-client/package.json
+++ b/rhamble-client/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.12.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.6.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
